--- a/src/app/modules/admin/task/task.component.html
+++ b/src/app/modules/admin/task/task.component.html
@@ -3,43 +3,24 @@
         <div class="card-title">
             <h3 class="card-label">TAREAS Y NOTAS, elija una</h3>
         </div>
+        <div class="card-toolbar">
+            <button class="btn btn-outline-primary mb-2 mr-2" (click)="openModal()">Crear Tarea</button>
+        </div>
     </div>
     <div class="card-body">
-        <a routerLink="../tasks" class="btn btn-default font-weight-bold mr-2" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true}">Tarea</a>
-        <a routerLink="../notes" class="btn btn-default font-weight-bold mr-2" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true}">Nota</a>
-        <hr>
         <div class="form form-label-right">
             <div class="form-group row">
-                <div class="col-lg-3">
-                    <mat-form-field class="example-full-width" appearance="fill">
-                        <mat-label>Nombre</mat-label>
-                        <input matInput placeholder="Codigo" autocomplete="off">
-                        <mat-hint>Buscar por Nombre</mat-hint>
-                    </mat-form-field>
-                </div>
-                <div class="col-lg-3">
-                    <mat-form-field class="example-full-width" appearance="fill">
-                        <mat-label>Título</mat-label>
-                        <input matInput placeholder="Codigo" >
-                        <mat-hint>Buscar por Título</mat-hint>
-                    </mat-form-field>
-                </div>
-                <div class="col-lg-3">
-                    <mat-form-field appearance="fill">
-                        <mat-label>Rango de fecha</mat-label>
-                        <mat-date-range-input [rangePicker]="picker">
-                            <input matStartDate placeholder="Fecha inicio">
-                            <input matEndDate placeholder="Fecha fin">
-                        </mat-date-range-input>
-                        <mat-hint>Buscar por Rango de Fecha</mat-hint>
-                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-date-range-picker #picker></mat-date-range-picker>
-                    </mat-form-field>
-                </div>
-                <div class="col-lg-1">
-                </div>
-                <div class="col-lg-2">
-                    <button class="btn btn-outline-primary mb-2 mr-2" (click)="openModal()">CREAR TAREA</button>
+                <div class="col-lg-8">
+                    <div class="row" [formGroup]="searchGroup">
+                        <div class="col-lg-6">
+                            <input type="text" class="form-control" name="user" placeholder="Buscar por usuario" value=""
+                            formControlName="user" /><small class="form-text text-muted"><b>Buscar</b> por usuario</small>
+                        </div>
+                        <div class="col-lg-6">
+                            <input type="text" class="form-control" name="title" placeholder="Buscar por título" value=""
+                            formControlName="title" /><small class="form-text text-muted"><b>Buscar</b> por título</small>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -89,5 +70,7 @@
                 </tbody>
             </table>
         </div>
+        <app-paginator class="d-flex justify-content-between align-items-center flex-wrap" [paginator]="paginator"
+            [isLoading]="isLoading" (paginate)="paginate($event)"></app-paginator>
     </div>
 </div>
