--- a/src/app/modules/admin/notes/notes.component.html
+++ b/src/app/modules/admin/notes/notes.component.html
@@ -35,7 +35,7 @@
                     <th>OPCIONES</th>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let note of notesServiceDomain.items$ | async">
+                    <tr *ngFor="let note of _noteService.items$ | async">
                         <td> {{ note.user }} </td>
                         <td> {{ note.title }} </td>
                         <td> {{ note.description }} </td>
@@ -68,5 +68,7 @@
                 </tbody>
             </table>
         </div>
+        <app-paginator class="d-flex justify-content-between align-items-center flex-wrap" [paginator]="paginator"
+            [isLoading]="isLoading" (paginate)="paginate($event)"></app-paginator>
     </div>
 </div>
