--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -112,7 +112,7 @@
                     >
                     <a
                         class="menu-link"
-                        routerLink="/asign-internal-user"
+                        routerLink="/admin/ubigeo"
                         routerLinkActive="active"
                     >
                         <i class="menu-bullet menu-bullet-dot">
