--- a/src/app/modules/admin/ubigeo/ubigeo.component.html
+++ b/src/app/modules/admin/ubigeo/ubigeo.component.html
@@ -78,7 +78,7 @@
                             <a
                             title="Edit product"
                             class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3"
-                            [routerLink]="'/asign-internal-user/edit/' + data.id"
+                            [routerLink]="'/admin/ubigeo/edit/'+data.id"
                             >
                             <span
                                 [inlineSVG]="'./assets/media/svg/view.svg'"
