--- a/src/app/modules/admin/task/task.component.html
+++ b/src/app/modules/admin/task/task.component.html
@@ -8,10 +8,10 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="form form-label-right">
+        <div class="form form-label-right" [formGroup]="searchGroup">
             <div class="form-group row">
                 <div class="col-lg-8">
-                    <div class="row" [formGroup]="searchGroup">
+                    <div class="row" >
                         <div class="col-lg-6">
                             <input type="text" class="form-control" name="user" placeholder="Buscar por usuario" value=""
                             formControlName="user" /><small class="form-text text-muted"><b>Buscar</b> por usuario</small>
@@ -20,6 +20,52 @@
                             <input type="text" class="form-control" name="title" placeholder="Buscar por título" value=""
                             formControlName="title" /><small class="form-text text-muted"><b>Buscar</b> por título</small>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-lg-12">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <small class="form-text text-muted"><b>Fecha Inicio</b> | Seleccionar fecha</small>
+                                <div class="input-group">
+                                  <input class="form-control" readonly placeholder="Fecha Inicio" name="dp" 
+                                  formControlName="dateIn"
+                                  ngbDatepicker #ds="ngbDatepicker">
+                                  <div class="input-group-append">
+                                    <button class="btn btn-primary" (click)="ds.toggle()" type="button">
+                                        <span
+                                        [inlineSVG]="'./assets/media/svg/icons/Weather/Cloudy.svg'"
+                                        cacheSVG="true"
+                                        class="svg-icon menu-icon"
+                                      ></span>
+                                    </button>
+                                  </div>
+                                </div>
+                              </div>
+                        </div>
+
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <small class="form-text text-muted"><b>Fecha Fin</b> | Seleccionar fecha</small>
+                                <div class="input-group">
+                                  <input class="form-control" readonly placeholder="Fecha Fin" 
+                                  formControlName="dateFn"
+                                  name="dp" ngbDatepicker #de="ngbDatepicker">
+                                  <div class="input-group-append">
+                                    <button class="btn btn-primary" (click)="de.toggle()" type="button">
+                                        <span
+                                        [inlineSVG]="'./assets/media/svg/icons/Weather/Cloudy.svg'"
+                                        cacheSVG="true"
+                                        class="svg-icon menu-icon"
+                                      ></span>
+                                    </button>
+                                  </div>
+                                </div>
+                              </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
