--- a/src/app/modules/admin/ubigeo/components/edit-ubigeo/edit-ubigeo.component.html
+++ b/src/app/modules/admin/ubigeo/components/edit-ubigeo/edit-ubigeo.component.html
@@ -26,6 +26,7 @@
                                 autocomplete="off"
                                 placeholder="DNI"
                                 formControlName="dni"
+                                (ngModelChange)="mostrar($event)"
                             />
                             <div class="results" *ngIf="isLoadingSearchDni">
                                 <ul>
