--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -2,12 +2,12 @@
   <!--begin::Login-->
   <div class="login login-1 login-signin-on d-flex flex-column flex-lg-row flex-column-fluid bg-white" id="kt_login">
     <!--begin::Aside-->
-    <div class="login-aside d-flex flex-column flex-row-auto" style="background-color: #233b5e;">
+    <div class="login-aside d-flex flex-column flex-row-auto" style="background-color: #233b5e; background-size:cover; background-image: url('./assets/media/bg/bg-default.jpg')">
       <!--begin::Aside Top-->
       <div class="d-flex flex-column-auto flex-column pt-lg-40 pt-15">
         <!--begin::Aside header-->
         <a href="#" class="text-center mb-10">
-          <img src="./assets/media/logos/logoPrincipal.png" class="max-h-100px" alt="" />
+          <img src="./assets/media/logos/logoPrincipal.png" class="" style="max-width: -moz-available; padding: 16px;" alt="" />
         </a>
         <!--end::Aside header-->
 
@@ -21,8 +21,8 @@
       <!--end::Aside Top-->
 
       <!--begin::Aside Bottom-->
-      <div class="aside-img d-flex flex-row-fluid bgi-no-repeat bgi-position-y-bottom bgi-position-x-center"
-        style="background-image: url('./assets/media/images/login.png')"></div>
+      <!--div class="aside-img d-flex flex-row-fluid bgi-no-repeat bgi-position-y-bottom bgi-position-x-center"
+        style="background-image: url('./assets/media/images/login.png')"></div-->
       <!--end::Aside Bottom-->
     </div>
     <!--begin::Aside-->
